Update and rename open this file.html to open this file.html

--- a/ES6 coding/open this file.html
+++ b/ES6 coding/open this file.html
@@ -10,7 +10,7 @@
 
 <script>
 const myPromise = new Promise(function(myResolve, myReject) {
-  setTimeout(function(){ myResolve("I love You AAHANA !!"); }, 5000);
+  setTimeout(function(){ myResolve("I love You !!"); }, 5000);
 });
 
 myPromise.then(function(value) {
